<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>unitree_simulation</name>
  <version>1.0.0</version>
  <description>Basic simulator wrapper to mimic real Go2 ROS2 control API.</description>
  <maintainer email="earlaud@inria.fr">EtienneAr</maintainer>
  <license>TODO: License declaration</license>

  <depend>unitree_description</depend>
  <depend>simple</depend>
  <depend>pybullet</depend>
  <depend>pinocchio</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
